# majiq_academic

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  analize.py  as_events.py  bitbucket-pipelines.yml  builder.py  builder_onlyanot.py  correct_eventnames.py  environment.yaml  exon.py  gene.py  gene.test  getJuncTrans.py  globals.py  install.sh  junction.py  longreads2voila.py  majiq  majiq.py  majiq_analysis.py  meta.yaml  my_globals.py  parser.py  pipe.py  pipelines.py  pyproject.toml  read_result.py  read_result_getprior.py  requirements.txt  rna_reads.py  rnaseq_io.py  setup.cfg  setup.py  setup_majiq.py  setup_voila.py  simple_delta.py  voila_setup.py
analysis/: adjustdelta.py  filter.py  io.py  matrix.py  polyfitnb.py  psi.py  sample.py  weight.py
data/: defaultprior.pickle
doc/source/: api.rst  commandbuilder.rst  conf.py  gallery.rst  index.rst  whats-new.rst
grimoire/: RNAexperiment.py  analize.py  events.py  exon.py  gene.py  globals.py  junction.py  lsv.py  mglobals.py  rna_reads.py  rnaseq_io.py  slv.py
grimoire/utils/: decorators.py  matlab_utils.py  singleton.py  utils.py
info/: meta.yaml
longreads/: add_beta_prior_voila.py  config.py  figure_standalone.py  filter.py  flair.py  flairParser.py  geneID.py  generate_splice_graph.py  graph.py  longread2voila.py  lr_set.py  main.py  majiqv2.py  tests.py  tool_comparison.py
longreads/modulecases/: comparison_module.tsv  ex_module.isoforms.gtf  splice_graphs_module.json
longreads/testcases/: comparison.tsv  ex.isoforms.gtf  (+7 more)
majiq/: .gitignore  builder_onlyanot.py  pyproject.toml  requirements.txt  run_majiq.py  setup.py
majiq_old/: MANIFEST.in  run_majiq.py
old_majiq/: builder_onlyanot.py
plot/: compare_deltapsi.py  deltaposterior.py
scripts/: bestsetsearch.py  calc_psi.py  checknonpaired.py  correct_eventnames.py  delta_delta.py  delta_psi.py  delta_psi_pcr_comp.py  em_fit.py  explode_legacy_tsv.py  get_interesting_cases.py  hdf5_visual_to_oldvisual.py  junction_sample.py  naive.py  pair_rank.py  pair_rank_miso.py  pcr_comp.py  pcr_comp_psi.py  plot_expected_psi_dist.py  plot_psicomp.py  plot_ranks.py  plot_synthprior.py  plot_v.py  polyfit_ectf.py  psi_pcr_comp.py  psi_plot_barcharts.py  psi_scores.py  rank.py  read_rates_comp.py  read_result_getprior.py  scott_adapt.py  simple_delta.py  synth_priors.py  toscott_majiq.py  utils.py  variance_comparison.py  variance_stack_removal.py
src/: Connection.hpp  Contigs.hpp  Exons.hpp  GFF3.hpp  GeneJunctions.hpp  Genes.hpp  Interval.hpp  Introns.hpp  Junctions.hpp  MajiqTypes.hpp  OverGenes.hpp  Regions.hpp  SJJunctions.hpp  SpliceGraph.hpp  TODO.txt  __init__.py  adjustdelta.py  analize.py  filter.py  io.py  matrix.py  mglobals.py  new_majiq.cpp  polyfitnb.py  psi.py  pyContigs.cpp  pyGenes.cpp  pySJJunctions.cpp  pySpliceGraph.cpp  pybind_utils.hpp  sample.py  weight.py
tests/: conftest.py  test_scripts.py  test_splicegraph.py
utils/: .stats.py.swp  stats.py  utils.py
voila/: as_types.py  classifier.py  classify.py  conditional_table.py  config.py  constants.py  deltapsi.py  event.py  exceptions.py  filter.py  hdf5.py  index.py  io_voila.py  lsv.py  lsv_thumbnails.py  module_locator.py  processes.py  producer_consumer.py  psi.py  requirements.txt  requirements_docs.txt  run_voila.py  setup.cfg  setup.py  splice_graphics.py  splice_graphs.py  splitter.py  tsv.py  utils_voila.py  vlsv.py  voila_args.py  voila_log.py
(+871 files in other folders)
