[metadata]
name = new_majiq
description = Python/C++ module to analyze RNA splicing from RNA-seq experiments
keywords = MAJIQ, alternative splicing, bioinformatics
author = "Joseph K Aicher, Yoseph Barash"
author_email = yosephb@upenn.edu

[options]
zip_safe = False
include_package_data = True
install_requires =
    numpy >= 1.14
    xarray >= 0.15.1
    netcdf4 >= 1.5
    zarr >= 2.3
    dask[array] >= 2.11
    moccasin >= 0.26.0a
python_requires = >= 3.8
packages =
    new_majiq
package_dir =
    =src

[options.entry_points]
console_scripts =
    new-majiq = new_majiq._run.tools:main

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
