[metadata]
name = new_majiq
description = Python/C++ module to analyze RNA splicing from RNA-seq experiments
keywords = MAJIQ, alternative splicing, bioinformatics
author = "Joseph K Aicher, Yoseph Barash"
author_email = yosephb@upenn.edu

[options]
zip_safe = False
include_package_data = True
install_requires =
    numpy >= 1.21
    xarray >= 0.19
    bottleneck >= 1.3.2
    zarr >= 2.3
    dask[array] >= 2.11
    moccasin >= 0.26.0a
    scipy >= 1.6
python_requires = >= 3.8
packages =
    new_majiq
package_dir =
    =src

[options.package_data]
new_majiq =
    py.typed
    *.pyi


[options.entry_points]
console_scripts =
    new-majiq = new_majiq._run.tools:main

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
show_error_codes = True

[mypy-dask.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-zarr.*]
ignore_missing_imports = True
[mypy-rna_voila.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
