[metadata]
name = new_majiq
description = Python/C++ module to analyze RNA splicing from RNA-seq experiments
keywords = MAJIQ, alternative splicing, bioinformatics
author = "Joseph K Aicher, Yoseph Barash"
author_email = yosephb@upenn.edu

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages =
    new_majiq
package_dir =
    =src
install_requires =
    numpy >= 1.21
    # xarray version pinned before 0.20 as long as pydata/xarray#6062 is open
    xarray == 0.19
    bottleneck >= 1.3.2
    zarr >= 2.3
    dask[complete] >= 2.11
    moccasin >= 0.26.0a
    scipy >= 1.6

[options.extras_require]
docs =
    sphinx-autosummary-accessors
    sphinx_rtd_theme
    ipython
    ipykernel
    jupyter-client
    nbsphinx

[options.package_data]
new_majiq =
    py.typed
    *.pyi

[options.entry_points]
console_scripts =
    new-majiq = new_majiq._run.tools:main
    nm-legacy-tsv = new_majiq._run.legacy_explode_tsv:main
    nm-shared-base-events = new_majiq._run.shared_base_events:main

[tool:pytest]
python_files = test_*.py
testpaths = tests

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude=
    doc

[mypy]
exclude = doc
files = src/new_majiq/**/*.py
show_error_codes = True

[mypy-dask.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-zarr.*]
ignore_missing_imports = True
[mypy-rna_voila.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True

[aliases]
test = pytest
